--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.11.0",
     "react-input-emoji": "^5.6.5",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.9",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
